--- a/eds212_day2_activities.Rmd
+++ b/eds212_day2_activities.Rmd
@@ -10,4 +10,33 @@ knitr::opts_chunk$set(echo = TRUE)
 library(tidyverse)
 library(palmerpenguins)
 ```
+In your R Markdown document, find the derivative expression and slope at the indicated value for each the following functions in R (each in a separate code chunk).
+
+    f(x)=x2
+
+at x=3
+P(a)=2(3a+2)4−5
+at a=1.2
+g(t)=−4t(t2+1)3
+at t=0
+```{r}
+a <- expression(x ^2)
+deriv_a <- deriv(a, "x")
+x <- 3
+eval(deriv_a)
+
+b <- expression(2 * ((3 * a + 2) ^4) -5)
+deriv_b <- deriv(b, "a")
+a <- 1.2
+eval(deriv_b)
+
+c <- expression((-4*t) / ((t^2 +1)^3))
+deriv_c <- deriv(c, "t")
+t <- 0
+eval(deriv_c)
+```
+ggplot graph 
+```{r}
+
+```
 
