--- a/eds212_day2_activities.Rmd
+++ b/eds212_day2_activities.Rmd
@@ -38,7 +38,7 @@ eval(deriv_c)
 ggplot graph 
 ```{r}
 ggplot(data = penguins ,mapping = aes(x = bill_length_mm , y = bill_depth_mm)) + 
-  geom_point() +labs(x = "Bill Length (mm)" ,
-                        y= "Fliper Depth (mm)" , title = "Penguins")
+  geom_point(aes(color = sex)) +labs(x = "Bill Length (mm)" ,
+                        y= "Fliper Depth (mm)" , title = "Penguin Length vs Bill Depth")
 ```
 
