--- a/eds212_day2_activities.Rmd
+++ b/eds212_day2_activities.Rmd
@@ -10,15 +10,16 @@ knitr::opts_chunk$set(echo = TRUE)
 library(tidyverse)
 library(palmerpenguins)
 ```
+
+## Derivatives 
 In your R Markdown document, find the derivative expression and slope at the indicated value for each the following functions in R (each in a separate code chunk).
 
-    f(x)=x2
+$f(x)=x2$ at x=3
 
-at x=3
-P(a)=2(3a+2)4−5
-at a=1.2
-g(t)=−4t(t2+1)3
-at t=0
+$P(a)=2(3a+2)4−5$ at a=1.2
+
+$g(t)=−4t(t2+1)3$ at t=0
+
 ```{r}
 a <- expression(x ^2)
 deriv_a <- deriv(a, "x")
@@ -35,10 +36,11 @@ deriv_c <- deriv(c, "t")
 t <- 0
 eval(deriv_c)
 ```
-ggplot graph 
+
+##ggplot graph
+
 ```{r}
 ggplot(data = penguins ,mapping = aes(x = bill_length_mm , y = bill_depth_mm)) + 
   geom_jitter(aes(color = sex)) +labs(x = "Bill Length (mm)" ,
-                        y= "Fliper Depth (mm)" , title = "Penguin Length vs Bill Depth")
+                        y= "Flipper Depth (mm)" , title = "Penguin Length vs Bill Depth")
 ```
-
